# test-2-code-llm

./: .conventional-commits.yaml  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml  release.config.js  requirements-dev.txt
.github/workflows/: ci.yml  gen-doc.yml  release.yml  update-deps.yml
case_studies/connect_four/src/: main.py
case_studies/connect_four/src/controller/: game_controller.py
case_studies/connect_four/src/model/: game_state.py
case_studies/connect_four/src/view/: game_view.py
case_studies/connect_four/tests/ATxITxUT/integration/: test_model_controller.py
case_studies/connect_four/tests/ATxUT/acceptance/: test_connect_four.py
case_studies/connect_four/tests/ITxUT/integration/: test_view_controller.py
case_studies/connect_four/tests/ITxUT/unit/: test_view.py
case_studies/connect_four/tests/unit/: test_controller.py  test_model.py
case_studies/game_2048/src/: game_controller.py  game_state.py  game_view.py  main.py
case_studies/game_2048/tests/ATxIT/integration/: test_model_controller.py
case_studies/game_2048/tests/ATxITxUT/unit/: test_controller.py
case_studies/game_2048/tests/ATxUT/acceptance/: test_2048.py
case_studies/game_2048/tests/ITxUT/unit/: test_model.py  test_view.py
case_studies/game_2048/tests/acceptance/: test.py
case_studies/game_2048/tests/integration/: test_view_controller.py
case_studies/tic_tac_toe/src/: main.py
case_studies/tic_tac_toe/src/controller/: game_controller.py
case_studies/tic_tac_toe/src/model/: game_state.py
case_studies/tic_tac_toe/src/view/: game_view.py
case_studies/tic_tac_toe/tests/ATxIT/integration/: test_controller_model.py  test_controller_view.py
case_studies/tic_tac_toe/tests/ATxITxUT/unit/: test_model.py  test_view.py
case_studies/tic_tac_toe/tests/ATxUT/acceptance/: test_tic_tac_toe.py
case_studies/tic_tac_toe/tests/ATxUT/unit/: test_controller.py
case_studies/tic_tac_toe/tests/ITxUT/integration/: test_view_model.py
case_studies/tic_tac_toe/tests/unit/: test_controller.py  test_view.py
data-analysis/: analyze.py  rank.py
docs/: .nav.yml  architecture.md  design.md  experiments.md  implementation.md  index.md  introduction.md  requirements.md  results.md
docs/appendices/: audit.md  class-diagram.md  example-report.md
docs/assets/: config.js  extra.css  katex-auto-render.js
experiment-configs/: high-complexity.yaml  low-complexity.yaml  medium-complexity.yaml
results/: example-report.json
src/t2c/: __main__.py  main.py
src/t2c/cli/: cli_handler.py
src/t2c/cli/parsing/: argument_parser.py  config.py  configuration_merger.py  merged_config.py
src/t2c/cli/validation_chain/: chain_validator.py  validated_configuration.py  validation_result.py  validator_interface.py
src/t2c/cli/validation_chain/validators/: command_validator.py  dependency_validator.py  model_validator.py  path_validator.py  yaml_validator.py
src/t2c/core/: code_generation_engine.py  llm_provider_factory.py  reporting_engine.py  test_validation_engine.py  test_validator.py
src/t2c/core/llm_provider/: copilot.py  gemini.py  interface.py  llm_provider_factory.py  supported_models.py
src/t2c/core/llm_provider/providers/: base_provider.py  deepseek.py  gemini.py  llama3.py  local_provider.py  mistral.py  qwen3.py  remote_provider.py  smollm2.py
src/t2c/core/reporting/: code_gen_stats.py  collect_strategy.py  t2c_stat.py
src/t2c/core/reporting/observers/: code_generation_observer.py  test_validation_observer.py
src/t2c/core/reporting/strategies/: console_collector.py  json_collector.py
src/t2c/core/testing/: runner_factory.py  runner_interface.py  sandbox_environment_interface.py  sandbox_factory.py
src/t2c/core/testing/environments/: local.py
src/t2c/core/testing/runners/: pytest_runner.py
src/t2c/dispatcher/: command_factory.py  component_locator.py
src/t2c/dispatcher/commands/: command_interface.py  experiment_command.py  generate_command.py
src/t2c/llm_provider/: supported_models.py
tests/: test_dummy.py  test_main.py
